--- a/u10.qmd
+++ b/u10.qmd
@@ -19,7 +19,7 @@ Now it is time to develop a personal philosophy of Learning Communities, explori
 1. Teaching, Learning and Context
 2. Administrative and Supervisory Aspects of an Adult Educator
 
-### Learning Outcomes: {.unnumbered}
+### Unit Learning Outcomes {.unnumbered}
 
 When you have completed this unit you should be able to:
 
@@ -27,13 +27,11 @@ When you have completed this unit you should be able to:
 - Describe the supervisory and/or administrative aspects for which adult educators are accountable.
 - Create a platform of beliefs regarding adult learning for a specific context/organization.
 
-### Activity Checklist {.unnumbered}
+### Learning Activities {.unnumbered}
 
-These learning activities will engage you in considering the guiding questions for this unit. As you plan your week, be sure to include time for these important learning activities. *Note that not all activities are required. Your instructor will provide guidance on key activities to complete.*
+Here is a checklist of learning activities you will benefit from in completing this unit. You may find it helpful in planning your work.
 
 ::: {.learning-activity}
-
-**Learning Activities**
 
 - Add sticky notes to your textbooks.
 - Watch video about adult learning styles.
@@ -58,7 +56,7 @@ It is important to keep in mind that your personal likes and style will not be t
 
 ### Activity: Sticky Note Challenge!
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 Go through the Silberman and Brookfield texts and put a ‘sticky note’ on the pages of strategies that you like and plan to use. Think about why you like these facilitation techniques and what they say about your teaching and learning style.
 
@@ -66,7 +64,7 @@ Go through the Silberman and Brookfield texts and put a ‘sticky note’ on the
 
 ### Activity: Learning Styles Video
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 Watch this 5 minute video about the 4 Adult Learning Styles explained with JC Melvin.
 
@@ -75,18 +73,6 @@ As you watch, consider how you can best get through to learners. What activities
 [Watch: The 4 adult learning cycles & styles explained with JC Melvin](https://www.youtube.com/watch?v=5mApEVWZESA){target="_blank"}
 
 {{< video https://www.youtube-nocookie.com/embed/5mApEVWZESA >}}
-
-::: {.prote}
-
-Bleep bloop: The above video was auto embedded. If it was just a link, I added a title. If you don't like the title, change it, and I'll leave it alone if I come across it again.
-
-:::
-
-<div class="video-container">
-
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5mApEVWZESA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-</div>
 
 :::
 
@@ -104,15 +90,9 @@ Palmer (2017) suggests that change begins when we, as individual teachers and fa
 
 ### Activity: Closing Song
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 As a closing activity, enjoy listening to this song. The whole effort of taking this certificate program, of wanting to be involved in transforming others through education and indeed of all our efforts in life, is in anticipation of something more - something ‘fresh and green’. And here is a song to inspire your continued efforts: ["Fresh and Green"](https://www.youtube.com/watch?v=uKjVQ5VSaXc){target="_blank"} by Steve Bell.
-
-<div class="video-container">
-
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/uKjVQ5VSaXc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-</div>
 
 > **FRESH AND GREEN (Psalm 92)**
 > *music and lyrics by Steve Bell*
@@ -192,7 +172,6 @@ You will write a draft of the Platform Paper in Unit 8 and post for Peer Review.
 
 :::
 
-## Checking Your Learning {.unnumbered}
 
 ::: {.check}
 
@@ -203,11 +182,3 @@ You will write a draft of the Platform Paper in Unit 8 and post for Peer Review.
 - articulate your platform of beliefs regarding adult learning for a specific context/organization?
 
 :::
-
-## References {.unnumbered}
-
-- Brookfield, S. (2013). *Powerful techniques for teaching adults*. San Francisco: Jossey-Bass.
-- Brookfield, S. and Preskill, S. (2016). *The discussion book: 50 great ways to get people talking*. San Francisco: Jossey Bass.
-- Palmer, P. (2017). *The courage to teach: Exploring the inner landscape of a teacher’s life*. San Francisco: Wiley.
-- Silberman, M. L., & Biech, E. (2015). *Active training: A handbook of techniques, designs, case examples, and tips* (4th ed.). Wiley.
-- Wheatley, M. (2017). *Who do we choose to be? Facing reality, claiming leadership, restoring sanity.*
