--- a/u4.qmd
+++ b/u4.qmd
@@ -21,20 +21,18 @@ In this unit, our topics explore three different models of learning communities.
 2. The Community of Truth (Palmer, 2017)
 3. Trinity Community of Inquiry (Madland, 2017)
 
-### Learning Outcomes {.unnumbered}
+### Unit Learning Outcomes {.unnumbered}
 
 When you have completed this unit you should be able to:
 
 - Describe elements of an authentic learning community.
 - Compare learning community models.
 
-### Activity Checklist {.unnumbered}
+### Learning Activities {.unnumbered}
 
-These learning activities will engage you in considering the guiding questions for this unit. As you plan your week, be sure to include time for these important learning activities. *Note that not all activities are required. Your instructor will provide guidance on key activities to complete.*
+Here is a checklist of learning activities you will benefit from in completing this unit. You may find it helpful in planning your work.
 
 ::: {.learning-activity}
-
-**Learning Activities**
 
 - Read "What IS a Learning Community?" (Brower & Dettinger, 1998) and respond in your Reflective Journal. Alternatively, read and reflect on Defining and Measuring Academic Success (York et. Al).
 - Read and reflect on *The Courage to Teach,* Chapter 4 Knowing in Community (Palmer, P. (2017).
@@ -62,7 +60,7 @@ As you consider the learning community you will facilitate, consider how you mig
 
 ### Activity: Compare Community Models
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 Read ["What IS a Learning Community?" (Brower & Dettinger, 1998)](assets/unit4/Learning_community.pdf){target="_blank"}.
 
@@ -84,7 +82,7 @@ Read ["What IS a Learning Community?" (Brower & Dettinger, 1998)](assets/unit4/L
 
 ### Activity: York Reading and Reflection
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 Read York et.al - [Defining and Measuring Academic Success](https://eric.ed.gov/?q=EJ1059739){target="_blank"} (2015). Also available through the TWU library.
 
@@ -112,7 +110,7 @@ Palmer’s (2017) model highlights the relational knowledge of learning communit
 
 ### Activity: Palmer Reading and Reflection
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 Read *The Courage to Teach,* Chapter 4 "Knowing in Community" (Palmer, 2017).
 
@@ -142,7 +140,7 @@ Figure 1. Transformational Learning Model from Madland, C. (2017). The TWU Commu
 
 ### Activity: Madland Reading and Reflection
 
-::: {.learning-activity}
+::: {.learning-activity time=""}
 
 Review the [The Trinity Community of Inquiry](assets/unit4/Madland-transformational-learning.pdf){target="_blank"} (Madland, 2017).
 
@@ -182,8 +180,6 @@ Provide a brief description of each of the three models (with citations as appro
 
 :::
 
-### Checking your Learning {.unnumbered}
-
 ::: {.check}
 
 **Use the learning outcomes for this unit as a checklist of understanding before you move to the next unit. Can you:**
@@ -192,11 +188,3 @@ Provide a brief description of each of the three models (with citations as appro
 - compare learning community models?
 
 :::
-
-## References {.unnumbered}
-
-- Athabasca University. (n.d.) Community of Inquiry Model. Retrieved from: [https://coi.athabascau.ca/coi-model](https://coi.athabascau.ca/coi-model){target="_blank"}
-- Brower, A., Carlson-Dakes, C.G., Barger, S.S. (2007). A learning community model of graduate student professional teaching excellence. *Wisconsin Center for the Advancement of Postsecondary Education*. Retrieved from: [https://minds.wisconsin.edu/bitstream/handle/1793/43615/WP010.pdf?sequence=1&isAllowed=y](https://minds.wisconsin.edu/bitstream/handle/1793/43615/WP010.pdf?sequence=1&isAllowed=y){target="_blank"}
-- Brower, A. & Dettinger, K. (1998). What is a learning community?: Toward a comprehensive model. *About Campus: Enriching the Student Experience. 3*(5), 15-21*.
-- Madland, C. (2017). The Trinity Community of Inquiry. Creative Commons License.
-- Palmer, P. (2017). *The courage to teach: Exploring the inner landscape of a teacher’s life.* San Francisco: Wiley.
